--- a/index.html
+++ b/index.html
@@ -5,52 +5,52 @@
     <title>Mahir Yavuz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Domine" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <section class="page-header">
+    <!-- <section class="page-header">
       <h1 class="project-name">Mahir Yavuz</h1>
       <h2 class="project-tagline">Co-founder of Topos</h2>
-    </section>
+    </section> -->
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mahir Yavuz is the CPO and Co-founder of Topos.</h3>
+      <h2>Mahir Yavuz is the CPO and Co-founder of <a href="https://topos.com">Topos</a>.</h2>
 
-<p>As a creative technology director, Mahir is a thought leader in Data Science, Visualization, AI/ML products. In the roles he assumed, he partners with a team of data scientists, technologists and designers on solutions for data-centric business problems for clients across the agency that included Nike, PWC, Google, E*TRADE, Tiffany, Walmart and Samsung.</p>
+      <p>Mahir is a seasoned leader in Data Science, Visualization and AI/ML products. In the roles he assumed, he partners with a team of data scientists, technologists and designers on solutions for data-centric business problems for clients across the agency that included Nike, PWC, Google, E*TRADE, Tiffany, Walmart and Samsung.</p>
 
-<p>Mahir has more than 16 years of experience in product design and data rich business applications. From 2000 to 2006, Mahir worked as a lead designer and art director in various projects in Istanbul. Between 2006 and 2011, Mahir was the senior researcher on Information Design at the Ars Electronica Futurelab in Linz. Since 2003, he has also been lecturing and conducting workshops on visualization and information design at universities in Turkey, Austria, Canada and the U.S. Mahir’s work has been exhibited internationally including Ars Electronica Festival, Siggraph, Istanbul Biennial and ISEA among others. He is actively giving talks and workshops for organizations and festivals including NYC Government The Center for Innovation through Data Intelligence, Visualized Festival, TEDx Istanbul and Vienna.</p>
+      <p>Mahir has more than 16 years of experience in product design and data rich business applications. From 2000 to 2006, Mahir worked as a lead designer and art director in various projects in Istanbul. Between 2006 and 2011, Mahir was the senior researcher on Information Design at the Ars Electronica Futurelab in Linz. Since 2003, he has also been lecturing and conducting workshops on visualization and information design at universities in Turkey, Austria, Canada and the U.S. Mahir’s work has been exhibited internationally including Ars Electronica Festival, Siggraph, Istanbul Biennial and ISEA among others. He is actively giving talks and workshops for organizations and festivals including NYC Government The Center for Innovation through Data Intelligence, Visualized Festival, TEDx Istanbul and Vienna.</p>
 
-<p>Mahir has given lectures at undergraduate and graduate levels in the fields of interaction design, information design and data visualization since 2003. Taught at Istanbul Bilgi University in Turkey (2003-2006), University of Art and Design Linz in Austria (2006-2016) and currently working as Adjunct Faculty at Pratt (since 2016) and University of Pennsylvania in the U.S. (since 2014). Advised several BA and MA graduation projects and dissertations. Guest lectures in several universities including MIT, NYU, Colombia, SVA, UPenn, University of Calgary, Rutgers, FH Salzburg, FH St. Pölten, FH Hagenberg.</p>
+      <p>Mahir has given lectures at undergraduate and graduate levels in the fields of interaction design, information design and data visualization since 2003. Taught at Istanbul Bilgi University in Turkey (2003-2006), University of Art and Design Linz in Austria (2006-2016) and currently working as Adjunct Faculty at Pratt (since 2016) and University of Pennsylvania in the U.S. (since 2014). Advised several BA and MA graduation projects and dissertations. Guest lectures in several universities including MIT, NYU, Colombia, SVA, UPenn, University of Calgary, Rutgers, FH Salzburg, FH St. Pölten, FH Hagenberg.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Activities</h3>
+<h3>Activities</h3>
 
-<p>2016/11: Presentation at FastCompany Innovation Festival 2016
-2016/10: Panel at InboxAwesome conference in New York.
-2016/10: Presentation at Singapore National Design Centre on Designing with Data and Panel
-2016/10: Workshop at Singapore Visualizing Big Data
-2015/06: Presentation: TEDxVienna CityX event in Vienna.
-2015/04: Featured on Fast Company Design.
-2014/10: Guest Lecture: NYU – ITP in New York.
-2014/10: Performance: United Colors of Dissent, Zaragoza.
-2014/05: Presentation: TEDxReset presentation & video is online.
-2014/05: Exhibition: Understanding the World, Weizmann Institute in Rehovot.
-2014/04: Presentation: TEDxReset in Istanbul.
-2014/04: Guest Lecture: School of Visual Arts in New York.
-2013/12: Exhibition: Tracing the City 2013 Design Shanghai Exhibition, Shanghai.
-2013/11: Performance: Amber Festival, Istanbul.
-2013/11: Performance: Videospread, La Friche la Belle de Mai, Marseilles.
-2013/09: Performance: Ars Electronica Festival, Linz.
-2012/11: Designer Q&A: Visualizing Global Marathon in Hong Kong.
-2011/04: Exhibition: Tactics of Invisibility in ARTER, Istanbul.
-2010/10: Functional Aesthetics Book released on amazon.com
-2010/10: Presentation: Media Architecture Biennale in Vienna.
-2010/09: Article: Short article about the referendum results in Turkey.
-2010/09: Exhibition: Tactics of Invisibility opens in TANAS, Berlin.
-2010/09: Exhibition: Urban Mood in Ars Electronica 2010 in Linz.</p>
+<ul>
+  <li>2016/11: Presentation at FastCompany Innovation Festival 2016</li>
+  <li>2016/10: Panel at InboxAwesome conference in New York.</li>
+  <li>2016/10: Presentation at Singapore National Design Centre on Designing with Data and Panel</li>
+  <li>2016/10: Workshop at Singapore Visualizing Big Data</li>
+  <li>2015/06: Presentation: TEDxVienna CityX event in Vienna.</li>
+  <li>2015/04: Featured on Fast Company Design.</li>
+  <li>2014/10: Guest Lecture: NYU – ITP in New York.</li>
+  <li>2014/10: Performance: United Colors of Dissent, Zaragoza.</li>
+  <li>2014/05: Presentation: TEDxReset presentation & video is online.</li>
+  <li>2014/05: Exhibition: Understanding the World, Weizmann Institute in Rehovot.</li>
+  <li>2014/04: Presentation: TEDxReset in Istanbul.</li>
+  <li>2014/04: Guest Lecture: School of Visual Arts in New York.</li>
+  <li>2013/12: Exhibition: Tracing the City 2013 Design Shanghai Exhibition, Shanghai.</li>
+  <li>2013/11: Performance: Amber Festival, Istanbul.</li>
+  <li>2013/11: Performance: Videospread, La Friche la Belle de Mai, Marseilles.</li>
+  <li>2013/09: Performance: Ars Electronica Festival, Linz.</li>
+  <li>2012/11: Designer Q&A: Visualizing Global Marathon in Hong Kong.</li>
+  <li>2011/04: Exhibition: Tactics of Invisibility in ARTER, Istanbul.</li>
+  <li>2010/10: Functional Aesthetics Book released on amazon.com</li>
+  <li>2010/10: Presentation: Media Architecture Biennale in Vienna.</li>
+  <li>2010/09: Article: Short article about the referendum results in Turkey.</li>
+  <li>2010/09: Exhibition: Tactics of Invisibility opens in TANAS, Berlin.</li>
+  <li>2010/09: Exhibition: Urban Mood in Ars Electronica 2010 in Linz.</li>
+</ul>
 
 
       <footer class="site-footer">
