--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section> -->
 
     <section class="main-content">
-      <h2>Mahir Yavuz is the CPO and Co-founder of <a href="https://topos.com">Topos</a>.</h2>
+      <h2>Mahir Yavuz is Co-founder and CPO of <a href="https://topos.com">Topos</a>.</h2>
 
       <p>Mahir is a seasoned leader in Data Science, Visualization and AI/ML products. In the roles he assumed, he partners with a team of data scientists, technologists and designers on solutions for data-centric business problems for clients across the agency that included Nike, PWC, Google, E*TRADE, Tiffany, Walmart and Samsung.</p>
 
