--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </section> -->
 
     <section class="main-content">
-      <h2>Mahir Yavuz is co-founder of <a href="https://topos.com">Topos</a>.</h2>
+      <h2>Mahir Yavuz is Co-founder and CTO of <a href="https://topos.com">Topos</a>.</h2>
 
-      <p>Mahir is a seasoned leader in Data Science, Visualization and AI/ML products. In the roles he assumed, he partners with a team of data scientists, technologists and designers on solutions for data-centric business problems for clients across the agency that included Nike, PWC, Google, Microsoft, E*TRADE, Tiffany, Walmart and Samsung.</p>
+      <p>Mahir is a seasoned leader and researcher in Data Science, Visualization and AI/ML products. In the roles he assumed, he partners with a team of data scientists, engineers and designers on solutions for data-centric business problems for internal and external clients. Some notable clients: Nike, PWC, Google, Microsoft, E*TRADE, Tiffany, Walmart, Uber and Samsung.</p>
 
-      <p>Mahir has more than 18 years of experience in product design and data rich business applications. From 2000 to 2006, Mahir worked as a lead designer and art director in various projects in Istanbul. Between 2006 and 2011, Mahir was the senior researcher on Information Design at the Ars Electronica Futurelab in Linz. Since 2003, he has also been lecturing and conducting workshops on visualization and information design at universities in Turkey, Austria, Canada and the U.S. Mahir’s work has been exhibited internationally including Ars Electronica Festival, Siggraph, Istanbul Biennial and ISEA among others. He is actively giving talks and workshops for organizations and festivals including NYC Government The Center for Innovation through Data Intelligence, Visualized Festival, TEDx Istanbul and Vienna.</p>
+      <p>Mahir has more than 20 years of experience in product development and data rich business applications. From 2000 to 2006, Mahir worked as a lead product designer in various projects in Istanbul. Between 2006 and 2011, Mahir was the senior researcher on Information Design at the Ars Electronica Futurelab in Linz. Since 2003, he has also been lecturing and conducting workshops on visualization and information design at universities in Turkey, Austria, Canada and the U.S. Mahir’s work has been exhibited internationally including Ars Electronica Festival, Siggraph, Istanbul Biennial and ISEA among others. He is actively giving talks and workshops for organizations and festivals including NYC Government The Center for Innovation through Data Intelligence, Visualized Festival, TEDx Istanbul and Vienna.</p>
 
-      <p>Mahir has given lectures at undergraduate and graduate levels in the fields of interaction design, information design and data visualization since 2003. Taught at Istanbul Bilgi University in Turkey (2003-2006), University of Art and Design Linz in Austria (2006-2016) and currently working as Adjunct Faculty at Pratt (since 2016) and University of Pennsylvania in the U.S. (since 2014). Advised several BA and MA graduation projects and dissertations. Guest lectures in several universities including MIT, NYU, Colombia, SVA, UPenn, University of Calgary, Rutgers, FH Salzburg, FH St. Pölten, FH Hagenberg.</p>
+      <p>Mahir has given lectures at undergraduate and graduate levels in the fields of interaction design, product development, information design and data science since 2003. Taught at Istanbul Bilgi University in Turkey (2003-2006), University of Art and Design Linz in Austria (2006-2016), Pratt (2016-17) and currently working as Adjunct Faculty at the University of Pennsylvania (since 2014). Advised several BA and MA graduation projects and dissertations. Guest lectures in several universities including MIT, NYU, Colombia, SVA, UPenn, University of Calgary, Rutgers, FH Salzburg, FH St. Pölten, FH Hagenberg.</p>
 
 <!-- <h3>Activities</h3>
 
@@ -55,7 +55,7 @@
 
       <footer class="site-footer">
 
-        <span class="site-footer-credits">2020 &copy;</span>
+        <span class="site-footer-credits">2021 &copy;</span>
       </footer>
 
     </section>
