--- a/kaleidoscope/index.html
+++ b/kaleidoscope/index.html
@@ -40,7 +40,10 @@
       <h1 id="p_name" class="name"></h1>
       <div id="p_bio" class="bio"></div>  
       
+      
+      <h4 id="p_worktitle" class="name"></h4>
       <div id="p_work" class="work"></div>
+      <h6 id="p_credits" class="name"></h6>
 
       <div class="questions">
         <h4>What is the Ars Electronica Futurelab for you?</h4>
