--- a/kaleidoscope/index.html
+++ b/kaleidoscope/index.html
@@ -77,6 +77,7 @@
   <script type="text/javascript">
     function closeThis(){
       document.getElementById("content").style.display = "none"
+      document.getElementById("p_work").innerHTML = ""
     }
   </script>
 </body>
