--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section> -->
 
     <section class="main-content">
-      <h2>Mahir Yavuz is Co-founder and CTO of <a href="https://topos.com">Topos</a>.</h2>
+      <h2>Mahir Yavuz works as Director of Engineering at <a href="https://etsy.com">Etsy</a>. Previously Co-founder and CTO of <a href="https://topos.com">Topos</a>.</h2>
 
       <p>Mahir is a seasoned leader and researcher in Data Science, Visualization and AI/ML products. In the roles he assumed, he partners with a team of data scientists, engineers and designers on solutions for data-centric business problems for internal and external clients. Some notable clients: Nike, PWC, Google, Microsoft, E*TRADE, Tiffany, Walmart, Uber and Samsung.</p>
 
