--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </section> -->
 
     <section class="main-content">
-      <h2>Mahir Yavuz works as Director of Engineering at <a href="https://etsy.com">Etsy</a>. Previously Co-founder and CTO of <a href="https://topos.com">Topos</a>.</h2>
+      <h2>Mahir Yavuz works as Head of Engineering for Search, Recs, Ads at <a href="https://etsy.com">Etsy</a>. Previously Co-founder and CTO of <a href="https://topos.com">Topos</a>.</h2>
 
-      <p>Mahir is a seasoned leader and researcher in Data Science, Visualization and AI/ML products. In the roles he assumed, he partners with a team of data scientists, engineers and designers on solutions for data-centric business problems for internal and external clients. Some notable clients: Nike, PWC, Google, Microsoft, E*TRADE, Tiffany, Walmart, Uber and Samsung.</p>
+      <p>With over 20 years of experience in data science, visualization, and AI/ML products, he has led multidisciplinary teams to solve data-centric challenges for clients like Nike, PwC, Google, Microsoft, and more.</p>
 
-      <p>Mahir has more than 20 years of experience in product development and data rich business applications. From 2000 to 2006, Mahir worked as a lead product designer in various projects in Istanbul. Between 2006 and 2011, Mahir was the senior researcher on Information Design at the Ars Electronica Futurelab in Linz. Since 2003, he has also been lecturing and conducting workshops on visualization and information design at universities in Turkey, Austria, Canada and the U.S. Mahir’s work has been exhibited internationally including Ars Electronica Festival, Siggraph, Istanbul Biennial and ISEA among others. He is actively giving talks and workshops for organizations and festivals including NYC Government The Center for Innovation through Data Intelligence, Visualized Festival, TEDx Istanbul and Vienna.</p>
+      <p>Mahir’s work has been featured in international exhibitions and festivals, including the Ars Electronica Festival, SIGGRAPH, the Istanbul Biennial, and ISEA. He is a sought-after speaker, delivering talks and workshops at events such as the Visualized Festival, TEDx Istanbul and Vienna, and for organizations like NYC Government’s Center for Innovation through Data Intelligence.</p>
 
-      <p>Mahir has given lectures at undergraduate and graduate levels in the fields of interaction design, product development, information design and data science since 2003. Taught at Istanbul Bilgi University in Turkey (2003-2006), University of Art and Design Linz in Austria (2006-2016), Pratt (2016-17) and currently working as Adjunct Faculty at the University of Pennsylvania (since 2014). Advised several BA and MA graduation projects and dissertations. Guest lectures in several universities including MIT, NYU, Colombia, SVA, UPenn, University of Calgary, Rutgers, FH Salzburg, FH St. Pölten, FH Hagenberg.</p>
+      <p>An experienced educator since 2003, Mahir has taught at institutions like the University of Pennsylvania, Pratt, and the University of Art and Design Linz, advising numerous student projects and guest lecturing at MIT, NYU, Columbia, and more.</p>
 
 <!-- <h3>Activities</h3>
 
