--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section> -->
 
     <section class="main-content">
-      <h2>Mahir Yavuz works as Head of Engineering for Search, Recs, Ads at <a href="https://etsy.com">Etsy</a>. Previously Co-founder and CTO of <a href="https://topos.com">Topos</a>.</h2>
+      <p>Mahir Yavuz is the Head of Engineering for Search, Recs, Ads at <a href="https://etsy.com">Etsy</a> and former Co-founder and CTO of <a href="https://topos.com">Topos</a>.</p>
 
       <p>With over 20 years of experience in data science, visualization, and AI/ML products, he has led multidisciplinary teams to solve data-centric challenges for clients like Nike, PwC, Google, Microsoft, and more.</p>
 
