--- a/index.html
+++ b/index.html
@@ -1,65 +1,72 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <title>Mahir Yavuz</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href="https://fonts.googleapis.com/css?family=Domine" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-  </head>
-  <body>
-    <!-- <section class="page-header">
-      <h1 class="project-name">Mahir Yavuz</h1>
-      <h2 class="project-tagline">Co-founder of Topos</h2>
-    </section> -->
-
-    <section class="main-content">
-      <p>Mahir Yavuz is the Head of Engineering for Search, Recs, Ads at <a href="https://etsy.com">Etsy</a> and former Co-founder and CTO of <a href="https://topos.com">Topos</a>.</p>
-
-      <p>With over 20 years of experience in data science, visualization, and AI/ML products, he has led multidisciplinary teams to solve data-centric challenges for clients like Nike, PwC, Google, Microsoft, and more.</p>
-
-      <p>Mahir’s work has been featured in international exhibitions and festivals, including the Ars Electronica Festival, SIGGRAPH, the Istanbul Biennial, and ISEA. He is a sought-after speaker, delivering talks and workshops at events such as the Visualized Festival, TEDx Istanbul and Vienna, and for organizations like NYC Government’s Center for Innovation through Data Intelligence.</p>
-
-      <p>An experienced educator since 2003, Mahir has taught at institutions like the University of Pennsylvania, Pratt, and the University of Art and Design Linz, advising numerous student projects and guest lecturing at MIT, NYU, Columbia, and more.</p>
-
-<!-- <h3>Activities</h3>
-
-<ul>
-  <li>2016/11: Presentation at FastCompany Innovation Festival 2016</li>
-  <li>2016/10: Panel at InboxAwesome conference in New York.</li>
-  <li>2016/10: Presentation at Singapore National Design Centre on Designing with Data and Panel</li>
-  <li>2016/10: Workshop at Singapore Visualizing Big Data</li>
-  <li>2015/06: Presentation: TEDxVienna CityX event in Vienna.</li>
-  <li>2015/04: Featured on Fast Company Design.</li>
-  <li>2014/10: Guest Lecture: NYU – ITP in New York.</li>
-  <li>2014/10: Performance: United Colors of Dissent, Zaragoza.</li>
-  <li>2014/05: Presentation: TEDxReset presentation & video is online.</li>
-  <li>2014/05: Exhibition: Understanding the World, Weizmann Institute in Rehovot.</li>
-  <li>2014/04: Presentation: TEDxReset in Istanbul.</li>
-  <li>2014/04: Guest Lecture: School of Visual Arts in New York.</li>
-  <li>2013/12: Exhibition: Tracing the City 2013 Design Shanghai Exhibition, Shanghai.</li>
-  <li>2013/11: Performance: Amber Festival, Istanbul.</li>
-  <li>2013/11: Performance: Videospread, La Friche la Belle de Mai, Marseilles.</li>
-  <li>2013/09: Performance: Ars Electronica Festival, Linz.</li>
-  <li>2012/11: Designer Q&A: Visualizing Global Marathon in Hong Kong.</li>
-  <li>2011/04: Exhibition: Tactics of Invisibility in ARTER, Istanbul.</li>
-  <li>2010/10: Functional Aesthetics Book released on amazon.com</li>
-  <li>2010/10: Presentation: Media Architecture Biennale in Vienna.</li>
-  <li>2010/09: Article: Short article about the referendum results in Turkey.</li>
-  <li>2010/09: Exhibition: Tactics of Invisibility opens in TANAS, Berlin.</li>
-  <li>2010/09: Exhibition: Urban Mood in Ars Electronica 2010 in Linz.</li>
-</ul> -->
-
-
-      <footer class="site-footer">
-
-        <span class="site-footer-credits">2025 &copy;</span>
-      </footer>
-
-    </section>
-
-  
-  </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biography</title>
+    <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: "Eczar", serif;
+            font-optical-sizing: auto;
+            font-weight: 300;
+            font-size: 1.2em;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #f0f0f0;
+            color: #333;
+        }
+        .container {
+            max-width: 600px;
+            width: 100%;
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .profile-pic {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            margin: 0 auto;
+            display: block;
+            object-fit: cover;
+        }
+        h1 {
+            text-align: center;
+            margin: 15px 0;
+        }
+        p {
+/*            text-align: center;*/
+            line-height: 1.8;
+        }
+        .social-links {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .social-links a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #007bff;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+        <h1>Mahir Yavuz</h1>
+        <p><b>Mahir is the Head of Engineering for Search, Recommendations, and Ads at Etsy.</b> With over 20 years of experience in product development, data science, and AI/ML, he has led teams in developing innovative solutions for companies such as Nike, PwC, Google, and Microsoft.</p>
+        <p>Previously, Mahir served as Co-founder and CTO of Topos, Director of Data Science at R/GA, and Senior Researcher at Ars Electronica Futurelab in Linz. His work has been featured globally at events like the Ars Electronica Festival and SIGGRAPH, and he frequently speaks at conferences including Microsoft Build, TEDx, and Visualized.</p>
+        <p>An experienced educator since 2003, Mahir has taught at institutions like the University of Pennsylvania, Pratt, and the University of Art and Design Linz, advising numerous student projects and guest lecturing at MIT, NYU, Columbia, and more.
+        </p>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/mahiryavuz/">LinkedIn</a>
+            <a href="https://bsky.app/profile/mahiryavuz.bsky.social">Bluesky</a>
+        </div>
+    </div>
+</body>
 </html>
